--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
-    "axios": "^1.6.2",
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3"
+    "env": "^0.0.2",
+    "express": "^4.21.1",
+    "mongoose": "^8.8.0"
   }
 }
